[gd_scene load_steps=20 format=3 uid="uid://c7orf4jdu2dnh"]

[ext_resource type="PackedScene" uid="uid://vrvolxvx6jpt" path="res://scene/hallway-split.glb" id="1_048vf"]
[ext_resource type="Script" uid="uid://bj27xo4jub6s1" path="res://scene/Scenario/map.gd" id="1_hpxaj"]
[ext_resource type="PackedScene" uid="uid://dvak0s01m82hr" path="res://students_table.glb" id="2_qcvc2"]
[ext_resource type="PackedScene" uid="uid://clrrxjo78c3lv" path="res://students_chair.glb" id="3_ohip4"]
[ext_resource type="PackedScene" uid="uid://bfclp2psybj2k" path="res://asset/teacherkumronglbtoscene.tscn" id="5_hs75y"]

[sub_resource type="BoxShape3D" id="BoxShape3D_im7a4"]
size = Vector3(0.941376, 0.831161, 1.72375)

[sub_resource type="BoxShape3D" id="BoxShape3D_70gc7"]
size = Vector3(3.16273, 0.162109, 60.0349)

[sub_resource type="BoxShape3D" id="BoxShape3D_cunvk"]
size = Vector3(10.4531, 0.162, 6.19518)

[sub_resource type="BoxShape3D" id="BoxShape3D_fuhea"]
size = Vector3(0.722229, 3.51651, 52.0799)

[sub_resource type="BoxShape3D" id="BoxShape3D_vkwcq"]
size = Vector3(0.341309, 3.17633, 60.4609)

[sub_resource type="BoxShape3D" id="BoxShape3D_wog2h"]
size = Vector3(10.7462, 3.14185, 0.651497)

[sub_resource type="BoxShape3D" id="BoxShape3D_837m6"]
size = Vector3(9.19818, 3.00436, 0.36853)

[sub_resource type="BoxShape3D" id="BoxShape3D_0cgoo"]
size = Vector3(13.2117, 3.51953, 0.212524)

[sub_resource type="BoxShape3D" id="BoxShape3D_bpio5"]
size = Vector3(10.9198, 3.18976, 0.573151)

[sub_resource type="BoxShape3D" id="BoxShape3D_0wuk4"]
size = Vector3(6.16479, 4.19629, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2djse"]
size = Vector3(30.745, 11.6172, 51.369)

[sub_resource type="BoxShape3D" id="BoxShape3D_hpxaj"]
size = Vector3(1, 15.7919, 12.2754)

[sub_resource type="BoxShape3D" id="BoxShape3D_hs75y"]
size = Vector3(1, 5.85242, 6.99274)

[sub_resource type="BoxMesh" id="BoxMesh_0wuk4"]

[node name="Node3D" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.926, 0, 0.832)
script = ExtResource("1_hpxaj")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="hallway-split" parent="StaticBody3D" instance=ExtResource("1_048vf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -45.5783, 0, -14.1164)

[node name="รวม" type="StaticBody3D" parent="StaticBody3D/hallway-split"]

[node name="โต๊ะ" parent="StaticBody3D/hallway-split/รวม" instance=ExtResource("2_qcvc2")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 48.9494, 0.00675257, 42.2004)

[node name="เก้าอี้ซ้าย" parent="StaticBody3D/hallway-split/รวม/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514439, -0.00949523, -0.758282)

[node name="เก้าอี้ขวา" parent="StaticBody3D/hallway-split/รวม/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514973, 0.00102985, -0.015686)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/hallway-split/รวม"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 51.7671, 0.397225, 42.3506)
shape = SubResource("BoxShape3D_im7a4")

[node name="รวม2" type="StaticBody3D" parent="StaticBody3D/hallway-split"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.3218, 0, 0)

[node name="โต๊ะ" parent="StaticBody3D/hallway-split/รวม2" instance=ExtResource("2_qcvc2")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 48.9494, 0.00675257, 42.2004)

[node name="เก้าอี้ซ้าย" parent="StaticBody3D/hallway-split/รวม2/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514439, -0.00949523, -0.758282)

[node name="เก้าอี้ขวา" parent="StaticBody3D/hallway-split/รวม2/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514973, 0.00102985, -0.015686)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/hallway-split/รวม2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 51.7671, 0.397225, 42.3506)
shape = SubResource("BoxShape3D_im7a4")

[node name="รวม3" type="StaticBody3D" parent="StaticBody3D/hallway-split"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3456, 0, 0)

[node name="โต๊ะ" parent="StaticBody3D/hallway-split/รวม3" instance=ExtResource("2_qcvc2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 48.9494, 0.00675257, 42.2004)

[node name="เก้าอี้ซ้าย" parent="StaticBody3D/hallway-split/รวม3/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514439, -0.00949523, -0.758282)

[node name="เก้าอี้ขวา" parent="StaticBody3D/hallway-split/รวม3/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514973, 0.00102985, -0.015686)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/hallway-split/รวม3"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 49.0909, 0.397225, 39.3763)
shape = SubResource("BoxShape3D_im7a4")

[node name="รวม4" type="StaticBody3D" parent="StaticBody3D/hallway-split"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3456, 0, -5.52137)

[node name="โต๊ะ" parent="StaticBody3D/hallway-split/รวม4" instance=ExtResource("2_qcvc2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 48.9494, 0.00675257, 42.2004)

[node name="เก้าอี้ซ้าย" parent="StaticBody3D/hallway-split/รวม4/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514439, -0.00949523, -0.758282)

[node name="เก้าอี้ขวา" parent="StaticBody3D/hallway-split/รวม4/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514973, 0.00102985, -0.015686)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/hallway-split/รวม4"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 49.1031, 0.397225, 39.3769)
shape = SubResource("BoxShape3D_im7a4")

[node name="รวม5" type="StaticBody3D" parent="StaticBody3D/hallway-split"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3456, 0, -10.5622)

[node name="โต๊ะ" parent="StaticBody3D/hallway-split/รวม5" instance=ExtResource("2_qcvc2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 48.9494, 0.00675257, 42.2004)

[node name="เก้าอี้ซ้าย" parent="StaticBody3D/hallway-split/รวม5/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514439, -0.00949523, -0.758282)

[node name="เก้าอี้ขวา" parent="StaticBody3D/hallway-split/รวม5/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514973, 0.00102985, -0.015686)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/hallway-split/รวม5"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 49.0987, 0.397225, 39.3894)
shape = SubResource("BoxShape3D_im7a4")

[node name="รวม6" type="StaticBody3D" parent="StaticBody3D/hallway-split"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3456, 0, -16.0145)

[node name="โต๊ะ" parent="StaticBody3D/hallway-split/รวม6" instance=ExtResource("2_qcvc2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 48.9494, 0.00675257, 42.2004)

[node name="เก้าอี้ซ้าย" parent="StaticBody3D/hallway-split/รวม6/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514439, -0.00949523, -0.758282)

[node name="เก้าอี้ขวา" parent="StaticBody3D/hallway-split/รวม6/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514973, 0.00102985, -0.015686)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/hallway-split/รวม6"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 49.077, 0.397225, 39.3904)
shape = SubResource("BoxShape3D_im7a4")

[node name="รวม7" type="StaticBody3D" parent="StaticBody3D/hallway-split"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3456, 0, -20.7414)

[node name="โต๊ะ" parent="StaticBody3D/hallway-split/รวม7" instance=ExtResource("2_qcvc2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 48.9494, 0.00675257, 42.2004)

[node name="เก้าอี้ซ้าย" parent="StaticBody3D/hallway-split/รวม7/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514439, -0.00949523, -0.758282)

[node name="เก้าอี้ขวา" parent="StaticBody3D/hallway-split/รวม7/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514973, 0.00102985, -0.015686)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/hallway-split/รวม7"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 49.1506, 0.397225, 39.3784)
shape = SubResource("BoxShape3D_im7a4")

[node name="รวม8" type="StaticBody3D" parent="StaticBody3D/hallway-split"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3456, 0, -26.0218)

[node name="โต๊ะ" parent="StaticBody3D/hallway-split/รวม8" instance=ExtResource("2_qcvc2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 48.9494, 0.00675257, 42.2004)

[node name="เก้าอี้ขวา" parent="StaticBody3D/hallway-split/รวม8/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514973, 0.00102985, -0.015686)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/hallway-split/รวม8"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 49.1112, 0.397225, 39.3959)
shape = SubResource("BoxShape3D_im7a4")

[node name="รวม9" type="StaticBody3D" parent="StaticBody3D/hallway-split"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3456, 0, -31.4875)

[node name="โต๊ะ" parent="StaticBody3D/hallway-split/รวม9" instance=ExtResource("2_qcvc2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 48.9494, 0.00675257, 42.2004)

[node name="เก้าอี้ซ้าย" parent="StaticBody3D/hallway-split/รวม9/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514439, -0.00949523, -0.758282)

[node name="เก้าอี้ขวา" parent="StaticBody3D/hallway-split/รวม9/โต๊ะ" instance=ExtResource("3_ohip4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514973, 0.00102985, -0.015686)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/hallway-split/รวม9"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 49.0969, 0.397225, 39.3864)
shape = SubResource("BoxShape3D_im7a4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.4826, -0.0733407, 2.90206)
shape = SubResource("BoxShape3D_70gc7")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.86748, -0.0755426, 29.7387)
shape = SubResource("BoxShape3D_cunvk")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.86748, -0.0755426, -25.6566)
shape = SubResource("BoxShape3D_cunvk")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4191, 1.26621, 1.37248)
shape = SubResource("BoxShape3D_fuhea")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.9025, 1.48728, 3.2112)
shape = SubResource("BoxShape3D_vkwcq")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.17491, 1.56185, -24.5148)
shape = SubResource("BoxShape3D_wog2h")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.42731, 1.51888, -26.8907)
shape = SubResource("BoxShape3D_837m6")

[node name="CollisionShape3D8" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.37012, 1.25977, 32.4473)
shape = SubResource("BoxShape3D_0cgoo")

[node name="CollisionShape3D9" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.29043, 1.50477, 27.6608)
shape = SubResource("BoxShape3D_bpio5")

[node name="CollisionShape3D10" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.6188, 1.59815, -26.7288)
shape = SubResource("BoxShape3D_0wuk4")

[node name="create" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.74944, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="create"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.8725, 5.30859, 1.43286)
shape = SubResource("BoxShape3D_2djse")

[node name="next" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.11289, -9.53674e-07, -19.1047)

[node name="CollisionShape3D" type="CollisionShape3D" parent="next"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.273814, 7.39594, -7.06061)
shape = SubResource("BoxShape3D_hpxaj")

[node name="back" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.61285, 0, 30.0744)

[node name="CollisionShape3D" type="CollisionShape3D" parent="back"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.42621, -0.0675354)
shape = SubResource("BoxShape3D_hs75y")

[node name="teacherkumronfull" parent="." instance=ExtResource("5_hs75y")]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 14.527, 0, -26.3926)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(4.60829, 0, 0, 0, 6.12638, 0, 0, 0, 0.416938, 13.7159, 9.53674e-07, -26.8731)
mesh = SubResource("BoxMesh_0wuk4")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 15.0203, 5.39983, 9.65798)
light_energy = 16.0
spot_range = 8.0

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 15.0203, 5.39983, 30.4018)
light_energy = 16.0
spot_range = 8.0

[node name="SpotLight3D3" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 15.0203, 5.39983, 19.6885)
light_energy = 16.0
spot_range = 8.0

[node name="SpotLight3D4" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 15.0203, 5.39983, -1.91671)
light_energy = 16.0
spot_range = 8.0

[node name="SpotLight3D5" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 15.0203, 5.39983, -10.1718)
light_energy = 16.0
spot_range = 8.0

[node name="SpotLight3D6" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 15.0203, 5.39983, -20.6236)
light_energy = 16.0
spot_range = 8.0

[node name="SpotLight3D7" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 7.82745, 5.39983, -25.5158)
light_energy = 16.0
spot_range = 8.0

[node name="SpotLight3D8" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 7.82745, 5.39983, 30.6403)
light_energy = 16.0
spot_range = 8.0

[connection signal="body_entered" from="create" to="." method="_on_create_body_entered"]
[connection signal="body_entered" from="next" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="back" to="." method="_on_back_body_entered"]
